@@ -1,3 +1,8 @@
+2004-02-02  Andrey Slusar <rusfidogate@users.sourceforge.net>
+
+	* src/toss/runinc.c: add ftpin, uuin support
+	    (thanks to Andrew Zhuravlev)
+
 2004-01-31  Andrey Slusar <rusfidogate@users.sourceforge.net>
 
 	* packages/freebsd: update freebsd port
